new data versions, updates for upcoming and ongoing closures